--- a/EFExemplo/EFExemplo/Views/Clientes/Index.cshtml
+++ b/EFExemplo/EFExemplo/Views/Clientes/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿@model IEnumerable<EFExemplo.Models.Cliente>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Cadastro de Clientes";
 }
 
-<h1>Index</h1>
+<h1>Cadastro de Clientes</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Adicionar</a>
 </p>
-<table class="table">
+<table class="table table-striped">
     <thead>
-        <tr>
+        <tr class="table table-striped">
             <th>
                 @Html.DisplayNameFor(model => model.Nome)
             </th>
@@ -22,26 +22,42 @@
                 @Html.DisplayNameFor(model => model.DataNascimento)
             </th>
             <th></th>
+            <th></th>
+            <th></th>
+
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataNascimento)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ClienteId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ClienteId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ClienteId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataNascimento)
+                </td>
+                <td>
+                    <a asp-action="Edit" class="btn btn-outline-warning" asp-route-id="@item.ClienteId">
+                        <svg bootstrap-icon="PencilFill" width="16" height="16" aria-label="Alarms"></svg>
+                    </a>
+                </td>
+                <td>
+                    <a asp-action="Details" class="btn btn-otline-info" asp-route-id="@item.ClienteId">
+                        <svg bootstrap-icon="CardList" width="16" height="16" aria-label="Alarms"></svg>
+
+                    </a>
+                </td>
+                <td>
+                    <a asp-action="Delete" class="btn btn-outline-danger" asp-route-id="@item.ClienteId">
+                        <svg bootstrap-icon="Trash" width="16" height="16" aria-label="Alarms"></svg>
+
+                    </a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
